--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <script src="https://kit.fontawesome.com/9f2ea6ea1d.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/9f2ea6ea1d.js" crossorigin="anonymous" SameSite="None"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
     <!--
@@ -26,7 +26,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function(){
+        emailjs.init("user_QQC6qcO4EoNkQKpzEG8mV");
+      })();
+    </script> -->
+    
+    <title>MichaelNewman.dev</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
